# rag-knowledge-base-fastapi

./: .env.example  LICENSE  README.md  docker-compose.yml  project_overview.txt  pyproject.toml
src/rag_knowledge_base_fastapi/: main.py
src/rag_knowledge_base_fastapi/config/: settings.py
src/rag_knowledge_base_fastapi/models/: chat.py  ingest.py  search.py
src/rag_knowledge_base_fastapi/services/: chat_service.py  chunking.py  db.py  kb_repository.py  openai_embeddings.py  retrieval.py  schema.py
src/rag_knowledge_base_fastapi/static/: chat.html
