[tool.poetry]
name = "rag-knowledge-base-fastapi"
version = "0.1.0"
description = "RAG knowledge assistant using FastAPI, OpenAI, and Postgres+pgvector."
authors = ["Nand Joshi <nand.rjoshi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "rag_knowledge_base_fastapi", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic-settings = "^2.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"